--- a/index.html
+++ b/index.html
@@ -23,11 +23,18 @@
         <div class="right tool-bar">
             <ul class="tool-bar-setting left">
                 <li>
-                    <a href="#">
-                        <i class="fa fa-user-circle-o"></i>
-                        &nbsp;未登录&nbsp;
-                        <i class="fa fa-caret-down"></i>
+                    <a href="#" id="headPortrait">
+                        <img src="images/loginHeadUser.jpg" alt="">
                     </a>
+                    <span id="dialogUserControl">
+                        <i>未登录</i>
+                        <i class="fa fa-caret-down"></i>
+                    </span>
+                    <div class="dialog-user">
+                        <div></div>
+                        <ul></ul>
+                        <ul></ul>
+                    </div>
                 </li>
                 <li>
                     <a href="#">
@@ -307,6 +314,128 @@
                                 </li>
                             </ul>
                         </div>
+                        <div class="recommend-block">
+                            <p class="recommend-block-header">
+                                <span class="left">推荐歌单</span>
+                                <span class="right">
+                                    <a href="#">更多></a>
+                                </span>
+                            </p>
+                            <div class="recommend-block-body">
+                                <dl>
+                                    <dt>
+                                        <span class="recommend-block-cover">根据你收藏的歌曲《海阔天空》推荐</span>
+                                        <a href="#">
+                                            <img src="images/songLists/songList1.jpg" alt=""> 
+                                        </a>
+                                    </dt>
+                                    <dd>
+                                        <a href="#">粤语|愿花光所有运气，在有生瞬间能遇到你</a>
+                                    </dd>
+                                </dl>
+                                <dl>
+                                    <dt>
+                                        <span class="recommend-block-cover">根据你收藏的歌曲《海阔天空》推荐</span>
+                                        <a href="#">
+                                            <img src="images/songLists/songList2.jpg" alt="">
+                                        </a>
+                                    </dt>
+                                    <dd>
+                                        <a href="#">决胜高考，致敬青春：高考是一场青春的战役</a>
+                                    </dd>
+                                </dl>
+                                <dl>
+                                    <dt>
+                                        <span class="recommend-block-cover">根据你收藏的歌曲《海阔天空》推荐</span>
+                                        <a href="#">
+                                            <img src="images/songLists/songList3.jpg" alt="">
+                                        </a>
+                                    </dt>
+                                    <dd>
+                                        <a href="#">黄金年代的美国之歌•摇摆爵士乐</a>
+                                    </dd>
+                                </dl>
+                                <dl>
+                                    <dt>
+                                        <span class="recommend-block-cover">根据你收藏的歌曲《海阔天空》推荐</span>
+                                        <a href="#">
+                                            <img src="images/songLists/songList4.jpg" alt="">
+                                        </a>
+                                    </dt>
+                                    <dd>
+                                        <a href="#">民谣·现场 | 有酒有歌的Livehouse隐在城市</a>
+                                    </dd>
+                                </dl>
+                                <dl>
+                                    <dt>
+                                        <span class="recommend-block-cover">根据你收藏的歌曲《海阔天空》推荐</span>
+                                        <a href="#">
+                                            <img src="images/songLists/songList5.jpg" alt="">
+                                        </a>
+                                    </dt>
+                                    <dd>
+                                        <a href="#">老爵士，入味地听</a>
+                                    </dd>
+                                </dl>
+                                <dl>
+                                    <dt>
+                                        <span class="recommend-block-cover">根据你收藏的歌曲《海阔天空》推荐</span>
+                                        <a href="#">
+                                            <img src="images/songLists/songList6.jpg" alt="">
+                                        </a>
+                                    </dt>
+                                    <dd>
+                                        <a href="#">
+                                            咖啡馆里一本书，邂逅一首爵士</a>
+                                    </dd>
+                                </dl>
+                                <dl>
+                                    <dt>
+                                        <span class="recommend-block-cover">根据你收藏的歌曲《海阔天空》推荐</span>
+                                        <a href="#">
+                                            <img src="images/songLists/songList7.jpg" alt="">
+                                        </a>
+                                    </dt>
+                                    <dd>
+                                        <a href="#">粤语歌里的百年孤寂</a>
+                                    </dd>
+                                </dl>
+                                <dl>
+                                    <dt>
+                                        <span class="recommend-block-cover">根据你收藏的歌曲《海阔天空》推荐</span>
+                                        <a href="#">
+                                            <img src="images/songLists/songList8.jpg" alt="">
+                                        </a>
+                                    </dt>
+                                    <dd>
+                                        <a href="#">【自用】JAZZ&BLUES</a>
+                                    </dd>
+                                </dl>
+                                <dl>
+                                    <dt>
+                                        <span class="recommend-block-cover">根据你收藏的歌曲《海阔天空》推荐</span>
+                                        <a href="#">
+                                            <img src="images/songLists/songList9.jpg" alt="">
+                                        </a>
+                                    </dt>
+                                    <dd>
+                                        <a href="#">
+                                            那些不应该被忽视的中国纯音乐</a>
+                                    </dd>
+                                </dl>
+                                <dl>
+                                    <dt>
+                                        <span class="recommend-block-cover">根据你收藏的歌曲《海阔天空》推荐</span>
+                                        <a href="#">
+                                            <img src="images/songLists/songList10.jpg" alt="">
+                                        </a>
+                                    </dt>
+                                    <dd>
+                                        <a href="#">《爵士与鸡尾酒•Mojito》</a>
+                                    </dd>
+                                </dl>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -357,6 +486,8 @@
     </div>
 
     <script src="js/global.js"></script>
+    <script src="js/header.js"></script>
+    <script src="js/musicTool.js"></script>
     <script src="js/findMusic.js"></script>
     <script src="js/index.js"></script>
 </body>
