--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@
         </div>
     </div>
     <div id="footer" class="clear">
-        <audio src="medias/music.mp3" autoplay id="music"></audio>
+        <audio src="medias/许美静%20-%20倾城.mp3" autoplay id="music"></audio>
         <div class="footer-left left">
             <span href="#">
                 <i class="fa fa-step-backward"></i>
