--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="https://github.com/AlvinBB/music_play">
                         <i class="fa fa-close"></i>
                     </a>
                 </li>
