--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>仿写网易云音乐</title>
     <link rel="stylesheet" href="style/index.css">
-    <link rel="stylesheet" href="style/theme.css">
+    <link rel="stylesheet" href="style/theme-red.css">
     <link rel="stylesheet" href="style/font-awesome-4.7.0/css/font-awesome.css">
     <!--<link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">-->
 </head>
@@ -26,25 +26,52 @@
                     <a href="#" id="headPortrait">
                         <img src="images/loginHeadUser.jpg" alt="">
                     </a>
-                    <span id="dialogUserControl">
+                    <span class="dialog-control">
                         <i>未登录</i>
                         <i class="fa fa-caret-down"></i>
                     </span>
-                    <div class="dialog-user">
+                    <div class="dialog">
                         <div></div>
                         <ul></ul>
                         <ul></ul>
                     </div>
                 </li>
                 <li>
-                    <a href="#">
+                    <span class="dialog-control">
                         <i class="fa fa-th"></i>
-                    </a>
+                    </span>
+                    <div class="dialog dialog-theme">
+                        <ul>
+                            <li>
+                                <a href="black">炫酷黑</a>
+                            </li>
+                            <li>
+                                <a href="red">官方红</a>
+                            </li>
+                            <li>
+                                <a href="pink">可爱粉</a>
+                            </li>
+                            <li>
+                                <a href="blue">天际蓝</a>
+                            </li>
+                            <li>
+                                <a href="green">清新绿</a>
+                            </li>
+                            <li>
+                                <a href="golden">土豪金</a>
+                            </li>
+                        </ul>
+                    </div>
                 </li>
                 <li>
-                    <a href="#">
+                    <span class="dialog-control">
                         <i class="fa fa-envelope-o"></i>
-                    </a>
+                    </span>
+                    <div class="dialog dialog-message">
+                        <div></div>
+                        <ul></ul>
+                        <ul></ul>
+                    </div>
                 </li>
                 <li>
                     <a href="#">
