--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
 <h1 class="active">测试文本2</h1>
 <h2 class="active">测试文本3</h2>
 
-<script src="rebuilt/rebuilt.js"></script>
+<script src="rebuilt/global.js"></script>
 <script src="rebuilt/index.js"></script>
 <script>
     $("h1").removeClass('active');
