--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@
         </div>
     </div>
 
-    <script src="rebuilt/rebuilt.js"></script>
+    <script src="rebuilt/global.js"></script>
     <script src="rebuilt/header.js"></script>
     <script src="rebuilt/footer_oop.js"></script>
     <script src="rebuilt/musicTool.js"></script>
