--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>仿写网易云音乐</title>
     <link rel="stylesheet" href="style/index.css">
-    <link rel="stylesheet" href="style/theme-red.css">
+    <link rel="stylesheet" href="style/theme-red.css" id="themeCSS">
+
     <link rel="stylesheet" href="style/font-awesome-4.7.0/css/font-awesome.css">
     <!--<link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">-->
 </head>
@@ -43,22 +44,22 @@
                     <div class="dialog dialog-theme">
                         <ul>
                             <li>
-                                <a href="black">炫酷黑</a>
+                                <a href="#black">炫酷黑</a>
                             </li>
                             <li>
-                                <a href="red">官方红</a>
+                                <a href="#red">官方红</a>
                             </li>
                             <li>
-                                <a href="pink">可爱粉</a>
+                                <a href="#pink">可爱粉</a>
                             </li>
                             <li>
-                                <a href="blue">天际蓝</a>
+                                <a href="#blue">天际蓝</a>
                             </li>
                             <li>
-                                <a href="green">清新绿</a>
+                                <a href="#green">清新绿</a>
                             </li>
                             <li>
-                                <a href="golden">土豪金</a>
+                                <a href="#golden">土豪金</a>
                             </li>
                         </ul>
                     </div>
@@ -819,18 +820,18 @@
     <div id="footer" class="clear">
         <audio src="medias/许美静%20-%20倾城.mp3" autoplay id="music" loop></audio>
         <div class="footer-left left">
-            <span href="#">
-                <i class="fa fa-step-backward"></i>
+            <span>
+                <i class="fa fa-step-backward" id="prevMusic"></i>
             </span>
-            <span href="#" class="play-pause" id="play_pause">
+            <span class="play-pause" id="play_pause">
                 <i class="fa fa-pause"></i>
             </span>
-            <span href="#">
-                <i class="fa fa-step-forward"></i>
+            <span>
+                <i class="fa fa-step-forward" id="nextMusic"></i>
             </span>
         </div>
         <div class="footer-right right">
-            <span>
+            <span id="volumeSilence" class="volume-silence">
                 <i class="fa fa-volume-up"></i>
             </span>
             <div class="progress-container progress-sound" id="volumeContainer">
