--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
             <div class="progress-container progress-sound" id="volumeContainer">
                 <div id="volumeControl" class="play-progress left"></div>
             </div>
-            <span class="footer-tool-right">
+            <span class="footer-tool-right" id="playStatusControl">
                 <i class="fa fa-repeat"></i>
             </span>
             <div class="footer-tool-right-list right">
@@ -879,7 +879,7 @@
 
     <script src="rebuilt/global.js"></script>
     <script src="rebuilt/header.js"></script>
-    <script src="rebuilt/footer_oop.js"></script>
+    <script src="rebuilt/player.js"></script>
     <script src="rebuilt/musicTool.js"></script>
     <script src="rebuilt/banner.js"></script>
     <script src="rebuilt/index.js"></script>
