disc animation complete
use canvas to draw the animation of disc rotating

--- a/index.html
+++ b/index.html
@@ -115,9 +115,99 @@
             </div>
             <div class="stage-container">
                 <div class="canvas-area">
-                    <div class="mid-disc"></div>
-                    <div class="out-disc"></div>
-                    <canvas id="drawArea" width="500" height="500"></canvas>
+                    <canvas id="drawArea" width="500" height="430"></canvas>
+                    <div class="right lyric-container">
+                        <div class="lyric-header">
+                            <h1>倾城</h1>
+                        </div>
+                        <div class="lyric-area">
+                            <pre>
+作曲 : 陈佳明
+
+作词 : 黄伟文
+
+热情就算熄灭了
+
+分手这一晚也重要
+
+甜言蜜语谎话嬉笑
+
+多给我一点 不要缺少
+
+话题尽了也不紧要
+
+吻我至凄冷的深宵
+
+繁华闹市灯光普照
+
+然而共你已再没破晓
+
+红眼睛幽幽地看着这孤城
+
+如同苦笑挤出的高兴
+
+全城为我花光狠劲
+
+浮华盛世做分手布景
+
+传说中痴心的眼泪会倾城
+
+霓虹熄了世界渐冷清
+
+烟花会谢 笙歌会停
+
+显得这故事尾声更动听
+
+热情就算熄灭了
+
+分手这一晚也重要
+
+甜言蜜语谎话嬉笑
+
+多给我一点 不要缺少
+
+话题尽了也不紧要
+
+吻我至凄冷的深宵
+
+繁华闹市灯光普照
+
+然而共你已再没破晓
+
+红眼睛幽幽的看着这孤城
+
+如同苦笑挤出的高兴
+
+全城为我花光狠劲
+
+浮华盛世做分手布景
+
+传说中痴心的眼泪会倾城
+
+霓虹熄了世界渐冷清
+
+烟花会谢 笙歌会停
+
+显得这故事尾声更动听
+
+红眼睛幽幽的看着这孤城
+
+如同苦笑挤出的高兴
+
+琼楼玉宇倒了阵行
+
+来营造这绝世的风景
+
+传说中痴心的眼泪会倾城
+
+霓虹熄了世界渐冷清
+
+烟花会谢 笙歌会停
+
+显得这故事尾声更动听
+                            </pre>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -853,7 +943,7 @@
                 <div id="volumeControl" class="play-progress left"></div>
             </div>
             <span class="footer-tool-right" id="playStatusControl">
-                <i class="fa fa-repeat"></i>
+                <i class="fa fa-indent"></i>
             </span>
             <div class="footer-tool-right-list right">
                 <span>
