--- a/public/index.html
+++ b/public/index.html
@@ -286,7 +286,7 @@
                     <li>
                         <a href="#2">
                             <i class="fa fa-list-ul"></i>
-                            &nbsp;&nbsp;爵士
+                            &nbsp;&nbsp;U-87
                         </a>
                     </li>
                     <li>
@@ -341,7 +341,51 @@
             </div>
         </div>
         <div class="display-area">
-            <div id="findMusic" class="main-divider-block">
+            <div class="main-divider-block song-lists-area" id="listsDetailArea">
+                <div class="lists-area-top">
+                    <div class="lists-area-top-cover left">
+                        <img src="images/singer_pic/singer.jpg" alt="歌单封面" id="listCoverPic"/>
+                    </div>
+                    <div class="lists-area-top-msg left">
+                        <div class="lists-msg-first">
+                            <span class="lists-type">
+                                歌单
+                            </span>
+                            <span class="lists-name">
+                                我喜欢的音乐
+                            </span>
+                        </div>
+                        <div class="lists-msg-second">
+                            <span class="lists-msg-head">
+                                <img src="images/loginHeadUser.jpg" alt="用户头像"/>
+                            </span>
+                            <span class="lists-msg-nickname">alvinbb</span>
+                        </div>
+                        <div class="lists-msg-third">
+                            标记
+                        </div>
+                    </div>
+                </div>
+                <div class="lists-area-body">
+                    <ul class="lists-area-body-head">
+                        <li class="active">
+                            <a href="#">歌曲列表</a>
+                        </li>
+                    </ul>
+                    <table class="lists-area-body-songs">
+                        <thead>
+                            <tr>
+                                <th>序号</th>
+                                <th>操作</th>
+                                <th>音乐标题</th>
+                                <th>歌手</th>
+                            </tr>
+                        </thead>
+                        <tbody id="catchListContainer"></tbody>
+                    </table>
+                </div>
+            </div>
+            <div id="findMusic" class="main-divider-block active">
                 <ul class="nav-bar">
                     <li class="active">
                         <a href="#personalizedRecommendation">
@@ -923,7 +967,7 @@
     </div>
 
     <div id="footer" class="clear">
-        <div class="music-dialog active scroll-bar-control">
+        <div class="music-dialog scroll-bar-control">
             <div>播放列表</div>
             <div>总<span class="total"></span>首</div>
             <ul id="musicDialogLists"></ul>
