--- a/public/index.html
+++ b/public/index.html
@@ -362,7 +362,9 @@
                             <span class="lists-msg-nickname">alvinbb</span>
                         </div>
                         <div class="lists-msg-third">
-                            标记
+                            <span class="list-play-all">
+                                <i class="fa fa-play-circle"></i>播放全部
+                            </span>
                         </div>
                     </div>
                 </div>
@@ -497,117 +499,117 @@
                                     <a href="#">更多></a>
                                 </span>
                             </p>
-                            <div class="recommend-block-body">
+                            <div class="recommend-block-body" id="recommendListsContainer">
                                 <dl>
                                     <dt>
                                         <span class="recommend-block-cover">根据你收藏的歌曲《海阔天空》推荐</span>
-                                        <a href="#">
+                                        <a href="#1">
                                             <img src="images/songLists/songList1.jpg" alt=""> 
                                         </a>
                                     </dt>
                                     <dd>
-                                        <a href="#">粤语|愿花光所有运气，在有生瞬间能遇到你</a>
+                                        <a href="#1">粤语|愿花光所有运气，在有生瞬间能遇到你</a>
                                     </dd>
                                 </dl>
                                 <dl>
                                     <dt>
                                         <span class="recommend-block-cover">根据你收藏的歌曲《海阔天空》推荐</span>
-                                        <a href="#">
+                                        <a href="#1">
                                             <img src="images/songLists/songList2.jpg" alt="">
                                         </a>
                                     </dt>
                                     <dd>
-                                        <a href="#">决胜高考，致敬青春：高考是一场青春的战役</a>
+                                        <a href="#1">决胜高考，致敬青春：高考是一场青春的战役</a>
                                     </dd>
                                 </dl>
                                 <dl>
                                     <dt>
                                         <span class="recommend-block-cover">根据你收藏的歌曲《海阔天空》推荐</span>
-                                        <a href="#">
+                                        <a href="#1">
                                             <img src="images/songLists/songList3.jpg" alt="">
                                         </a>
                                     </dt>
                                     <dd>
-                                        <a href="#">黄金年代的美国之歌•摇摆爵士乐</a>
+                                        <a href="#1">黄金年代的美国之歌•摇摆爵士乐</a>
                                     </dd>
                                 </dl>
                                 <dl>
                                     <dt>
                                         <span class="recommend-block-cover">根据你收藏的歌曲《海阔天空》推荐</span>
-                                        <a href="#">
+                                        <a href="#1">
                                             <img src="images/songLists/songList4.jpg" alt="">
                                         </a>
                                     </dt>
                                     <dd>
-                                        <a href="#">民谣·现场 | 有酒有歌的Livehouse隐在城市</a>
+                                        <a href="#1">民谣·现场 | 有酒有歌的Livehouse隐在城市</a>
                                     </dd>
                                 </dl>
                                 <dl>
                                     <dt>
                                         <span class="recommend-block-cover">根据你收藏的歌曲《海阔天空》推荐</span>
-                                        <a href="#">
+                                        <a href="#1">
                                             <img src="images/songLists/songList5.jpg" alt="">
                                         </a>
                                     </dt>
                                     <dd>
-                                        <a href="#">老爵士，入味地听</a>
+                                        <a href="#1">老爵士，入味地听</a>
                                     </dd>
                                 </dl>
                                 <dl>
                                     <dt>
                                         <span class="recommend-block-cover">根据你收藏的歌曲《海阔天空》推荐</span>
-                                        <a href="#">
+                                        <a href="#1">
                                             <img src="images/songLists/songList6.jpg" alt="">
                                         </a>
                                     </dt>
                                     <dd>
-                                        <a href="#">
+                                        <a href="#1">
                                             咖啡馆里一本书，邂逅一首爵士</a>
                                     </dd>
                                 </dl>
                                 <dl>
                                     <dt>
                                         <span class="recommend-block-cover">根据你收藏的歌曲《海阔天空》推荐</span>
-                                        <a href="#">
+                                        <a href="#1">
                                             <img src="images/songLists/songList7.jpg" alt="">
                                         </a>
                                     </dt>
                                     <dd>
-                                        <a href="#">粤语歌里的百年孤寂</a>
+                                        <a href="#1">粤语歌里的百年孤寂</a>
                                     </dd>
                                 </dl>
                                 <dl>
                                     <dt>
                                         <span class="recommend-block-cover">根据你收藏的歌曲《海阔天空》推荐</span>
-                                        <a href="#">
+                                        <a href="#1">
                                             <img src="images/songLists/songList8.jpg" alt="">
                                         </a>
                                     </dt>
                                     <dd>
-                                        <a href="#">【自用】JAZZ&BLUES</a>
+                                        <a href="#1">【自用】JAZZ&BLUES</a>
                                     </dd>
                                 </dl>
                                 <dl>
                                     <dt>
                                         <span class="recommend-block-cover">根据你收藏的歌曲《海阔天空》推荐</span>
-                                        <a href="#">
+                                        <a href="#1">
                                             <img src="images/songLists/songList9.jpg" alt="">
                                         </a>
                                     </dt>
                                     <dd>
-                                        <a href="#">
+                                        <a href="#1">
                                             那些不应该被忽视的中国纯音乐</a>
                                     </dd>
                                 </dl>
                                 <dl>
                                     <dt>
                                         <span class="recommend-block-cover">根据你收藏的歌曲《海阔天空》推荐</span>
-                                        <a href="#">
+                                        <a href="#1">
                                             <img src="images/songLists/songList10.jpg" alt="">
                                         </a>
                                     </dt>
                                     <dd>
-                                        <a href="#">《爵士与鸡尾酒•Mojito》</a>
+                                        <a href="#1">《爵士与鸡尾酒•Mojito》</a>
                                     </dd>
                                 </dl>
                             </div>
