--- a/public/index.html
+++ b/public/index.html
@@ -1021,7 +1021,7 @@
     <script src="rebuilt/global.js"></script>
     <script src="rebuilt/header.js"></script>
     <script src="rebuilt/player.js"></script>
-    <script src="rebuilt/musicTool.js"></script>
+    <script src="rebuilt/sideBar.js"></script>
     <script src="rebuilt/banner.js"></script>
     <script src="rebuilt/index.js"></script>
 </body>
