--- a/public/index.html
+++ b/public/index.html
@@ -1018,11 +1018,11 @@
         </div>
     </div>
 
-    <script src="rebuilt/global.js"></script>
-    <script src="rebuilt/header.js"></script>
-    <script src="rebuilt/player.js"></script>
-    <script src="rebuilt/sideBar.js"></script>
-    <script src="rebuilt/banner.js"></script>
-    <script src="rebuilt/index.js"></script>
+    <script src="script/global.js"></script>
+    <script src="script/header.js"></script>
+    <script src="script/player.js"></script>
+    <script src="script/sideBar.js"></script>
+    <script src="script/banner.js"></script>
+    <script src="script/index.js"></script>
 </body>
 </html>
