static page can play one test song now

--- a/public/index.html
+++ b/public/index.html
@@ -974,7 +974,7 @@
             <div>总<span class="total"></span>首</div>
             <ul id="musicDialogLists"></ul>
         </div>
-        <audio src="" autoplay id="music" loop></audio>
+        <audio src="medias/许美静%20-%20倾城.mp3" autoplay id="music" loop></audio>
         <div class="footer-left left">
             <span id="prevMusic">
                 <i class="fa fa-step-backward"></i>
